--- a/13-HTML&CSS-Intro/font-family.html
+++ b/13-HTML&CSS-Intro/font-family.html
@@ -18,53 +18,48 @@
       <div id="main">
         <h1>Font Family</h1>
         <p class="source-code-pro">
-          0123456789 <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |>
-              Source Code Pro<br>
+          Source Code Pro <br>
+          0123456789 <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |> <br>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
-              voluptas
-              esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio eaque similique ad.
+              voluptas esse necessitatibus consequatur rerum?
         </p>
         <p class="fira-code">
-          0123456789 <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |>
-              Fira Code<br>
+          Fira Code <br>
+          0123456789 <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |> <br>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
-              voluptas
-              esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio eaque similique ad.
+              voluptas esse necessitatibus consequatur rerum?
         </p>
         <p class="jetbrainsmono">
-          0123456789 <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |>
-              JetBrains Mono<br>
+          JetBrains Mono <br>
+          0123456789 <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |> <br>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
-              voluptas
-              esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio eaque similique ad.
+              voluptas esse necessitatibus consequatur rerum?
         </p>
         <p class="ibm-plex-mono">
-          0123456789 <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |>
-              IBM Plex Mono<br>
+          IBM Plex Mono <br>
+          0123456789 <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |> <br>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
-              voluptas
-              esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio eaque similique ad.
+              voluptas esse necessitatibus consequatur rerum?
         </p>
+        <code>
         <p class="cascadia-code">
-          0123456789 <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |>
-              Cascadia Code<br>
+          Cascadia Code <br>
+          0123456789 <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |> <br>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
-              voluptas
-              esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio eaque similique ad.
+              voluptas esse necessitatibus consequatur rerum?
         </p>
         <p class="consolas">
-          0123456789 <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |>
-              Consolas<br>
+          Consolas <br>
+          0123456789 <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |> <br>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
-              voluptas
-              esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio eaque similique ad.
+              voluptas esse necessitatibus consequatur rerum?
         </p>
+      </code>
         <p class="inconsolata">
-          0123456789 <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |>
-              Inconsolata<br>
+          Inconsolata <br>
+          0123456789 <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |> <br>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
-              voluptas
-              esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio eaque similique ad.
+              voluptas esse necessitatibus consequatur rerum?
         </p>
       </div>
     </main>
