--- a/13-HTML&CSS-Intro/font-size.html
+++ b/13-HTML&CSS-Intro/font-size.html
@@ -60,19 +60,19 @@
               voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
         <p class="jetbrainsmono large">
-          <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |> &nbsp;large (18px)
+          <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> &nbsp;large (18px)
               <br>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
               voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
         <p class="jetbrainsmono larger">
-          <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |> &nbsp;larger (19px)
+          <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => ->&nbsp;larger (19px)
               <br>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
               voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
         <p class="jetbrainsmono x-large">
-          <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> &nbsp;x-large (24px)
+          <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= &nbsp;x-large (24px)
               <br>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
               voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
