--- a/13-HTML&CSS-Intro/font-style-weight.html
+++ b/13-HTML&CSS-Intro/font-style-weight.html
@@ -71,17 +71,17 @@
               voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
         <p class="jetbrainsmono large weight-700">
-          0123456789 <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> |> &nbsp;large (18px) 700 <br>
+          <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> |> &nbsp;large (18px) 700 <br>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
               voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
         <p class="jetbrainsmono larger weight-800 italic">
-          <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> |> &nbsp;larger (19px) 800 italic <br>
+          <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= => larger (19px) 800 italic <br>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
               voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
         <p class="jetbrainsmono x-large weight-900 oblique">
-          <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= => &nbsp;x-large (24px) 900 oblique <br>
+          <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= x-large (24px) 900 oblique <br>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
             voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
