--- a/index.html
+++ b/index.html
@@ -104,6 +104,12 @@
             <li>
               <p><a class="ex" href="13-HTML&CSS-Intro/border-color.html">CSS Colors: Border Color</p></a>
             </li>
+            <li>
+              <p><a class="ex" href="13-HTML&CSS-Intro/background-images.html">CSS Colors: Background Images</p></a>
+            </li>
+            <li>
+              <p><a class="ex" href="13-HTML&CSS-Intro/background-size.html">CSS Colors: Background Size</p></a>
+            </li>
 
           </ol>
         </section>
