--- a/13-HTML&CSS-Intro/font-family.html
+++ b/13-HTML&CSS-Intro/font-family.html
@@ -18,48 +18,41 @@
       <div id="main">
         <h1>Font Family</h1>
         <p class="source-code-pro">
-          Source Code Pro <br>
-          0123456789 <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |> <br>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
-              voluptas esse necessitatibus consequatur rerum?
+          0123456789 &lt;!-- := <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt;&nbsp; Source Code Pro <br>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+            voluptas esse necessitatibus consequatur rerum?
         </p>
         <p class="fira-code">
-          Fira Code <br>
-          0123456789 <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |> <br>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
-              voluptas esse necessitatibus consequatur rerum?
+          0123456789 &lt;!-- := <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt;&nbsp; Fira Code <br>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+            voluptas esse necessitatibus consequatur rerum?
         </p>
         <p class="jetbrainsmono">
-          JetBrains Mono <br>
-          0123456789 <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |> <br>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
-              voluptas esse necessitatibus consequatur rerum?
+          0123456789 &lt;!-- := <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt;&nbsp; JetBrains Mono <br>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+            voluptas esse necessitatibus consequatur rerum?
         </p>
         <p class="ibm-plex-mono">
-          IBM Plex Mono <br>
-          0123456789 <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |> <br>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
-              voluptas esse necessitatibus consequatur rerum?
+          0123456789 &lt;!-- := <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt;&nbsp; IBM Plex Mono <br>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+            voluptas esse necessitatibus consequatur rerum?
         </p>
         <code>
         <p class="cascadia-code">
-          Cascadia Code <br>
-          0123456789 <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |> <br>
+          0123456789 &lt;!-- := <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt;&nbsp; Cascadia Code <br>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
               voluptas esse necessitatibus consequatur rerum?
         </p>
         <p class="consolas">
-          Consolas <br>
-          0123456789 <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |> <br>
+          0123456789 &lt;!-- := <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt;&nbsp; Consolas <br>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
               voluptas esse necessitatibus consequatur rerum?
         </p>
       </code>
         <p class="inconsolata">
-          Inconsolata <br>
-          0123456789 <> :=&nbsp;<=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => |=> -> ~~> ->> |> <br>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
-              voluptas esse necessitatibus consequatur rerum?
+          0123456789 &lt;!-- := <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt;&nbsp; Inconsolata <br>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
+            voluptas esse necessitatibus consequatur rerum?
         </p>
       </div>
     </main>
