--- a/index.html
+++ b/index.html
@@ -27,90 +27,94 @@
           <a class="ex" href="#section1" onclick="toggleSection('section1'); return false;">HTML & CSS Intro – Tasks</a>
         </h2>
         <section>
-          <ol>
+          <ol class="li-space">
             <li>
-              <p><a class="ex" href="13-HTML&CSS-Intro/headers.html">Headers</a></p>
+              <a class="ex" href="13-HTML&CSS-Intro/headers.html">Headers</a>
             </li>
             <li>
-              <p><a class="ex" href="13-HTML&CSS-Intro/paragraphs.html">Paragraphs</a></p>
+              <a class="ex" href="13-HTML&CSS-Intro/paragraphs.html">Paragraphs</a>
             </li>
             <li>
-              <p><a class="ex" href="13-HTML&CSS-Intro/nested-lists.html">Order and Unordered Lists</a></p>
+              <a class="ex" href="13-HTML&CSS-Intro/nested-lists.html">Order and Unordered Lists</a>
             </li>
             <li>
-              <p><a class="ex" href="13-HTML&CSS-Intro/links.html">Links</a></p>
+              <a class="ex" href="13-HTML&CSS-Intro/links.html">Links</a>
             </li>
             <li>
-              <p><a class="ex" href="13-HTML&CSS-Intro/images.html">Images</a></p>
+              <a class="ex" href="13-HTML&CSS-Intro/images.html">Images</a>
             </li>
             <li>
-              <p><a class="ex" href="13-HTML&CSS-Intro/table.html">Table</a></p>
+              <a class="ex" href="13-HTML&CSS-Intro/table.html">Table</a>
             </li>
             <li>
-              <p><a class="ex" href="13-HTML&CSS-Intro/forms.html">Forms</a></p>
+              <a class="ex" href="13-HTML&CSS-Intro/forms.html">Forms</a>
             </li>
             <li>
-              <p><a class="ex" href="13-HTML&CSS-Intro/text-formatting.html">Text Formatting</a></p>
+              <a class="ex" href="13-HTML&CSS-Intro/text-formatting.html">Text Formatting</a>
             <li>
-              <p><a class="ex" href="13-HTML&CSS-Intro/inline-elements.html">Inline Elements</a></p>
+              <a class="ex" href="13-HTML&CSS-Intro/inline-elements.html">Inline Elements</a>
             </li>
             <li>
-              <p><a class="ex" href="13-HTML&CSS-Intro/block-elements.html">Block Elements</a></p>
+              <a class="ex" href="13-HTML&CSS-Intro/block-elements.html">Block Elements</a>
             </li>
             <li>
-              <p><a class="ex" href="13-HTML&CSS-Intro/inline-styles.html">CSS Basics: Inline Styles</a></p>
+              <a class="ex" href="13-HTML&CSS-Intro/inline-styles.html">CSS Basics: Inline Styles</a>
             </li>
             <li>
-              <p><a class="ex" href="13-HTML&CSS-Intro/internal-styles.html">CSS Basics: Internal Styles</a></p>
+              <a class="ex" href="13-HTML&CSS-Intro/internal-styles.html">CSS Basics: Internal Styles</a>
             </li>
             <li>
-              <p><a class="ex" href="13-HTML&CSS-Intro/external-styles.html">CSS Basics: External Styles</a></p>
+              <a class="ex" href="13-HTML&CSS-Intro/external-styles.html">CSS Basics: External Styles</a>
             </li>
             <li>
-              <p><a class="ex" href="13-HTML&CSS-Intro/class-selector.html">CSS Selectors: Class Selector</a></p>
+              <a class="ex" href="13-HTML&CSS-Intro/class-selector.html">CSS Selectors: Class Selector</a>
             </li>
             <li>
-              <p><a class="ex" href="13-HTML&CSS-Intro/id-selector.html">CSS Selectors: ID Selector</a></p>
+              <a class="ex" href="13-HTML&CSS-Intro/id-selector.html">CSS Selectors: ID Selector</a>
             </li>
             <li>
-              <p><a class="ex" href="13-HTML&CSS-Intro/universal-selector.html">CSS Selectors: Universal Selector</a>
-              </p>
+              <a class="ex" href="13-HTML&CSS-Intro/universal-selector.html">CSS Selectors: Universal Selector</a>
             </li>
             <li>
-              <p><a class="ex" href="13-HTML&CSS-Intro/grouping-selector.html">CSS Selectors: Grouping Selector</a></p>
+              <a class="ex" href="13-HTML&CSS-Intro/grouping-selector.html">CSS Selectors: Grouping Selector</a>
             </li>
             <li>
-              <p><a class="ex" href="13-HTML&CSS-Intro/font-family.html">CSS Typography: Font Family</a></p>
+              <a class="ex" href="13-HTML&CSS-Intro/font-family.html">CSS Typography: Font Family</a>
             </li>
             <li>
-              <p><a class="ex" href="13-HTML&CSS-Intro/font-size.html">CSS Typography: Font Size</a></p>
+              <a class="ex" href="13-HTML&CSS-Intro/font-size.html">CSS Typography: Font Size</a>
             </li>
             <li>
-              <p><a class="ex" href="13-HTML&CSS-Intro/font-style-weight.html">CSS Typography: Font Style and
-                  Weight</a></p>
+              <a class="ex" href="13-HTML&CSS-Intro/font-style-weight.html">CSS Typography: Font Style and
+                Weight</a>
             </li>
             <li>
-              <p><a class="ex" href="13-HTML&CSS-Intro/text-alignment.html">CSS Typography: Text Alignment</a></p>
+              <a class="ex" href="13-HTML&CSS-Intro/text-alignment.html">CSS Typography: Text Alignment</a>
             </li>
             <li>
-              <p><a class="ex" href="13-HTML&CSS-Intro/line-height.html">CSS Typography: Line Height</p></a>
+              <a class="ex" href="13-HTML&CSS-Intro/line-height.html">CSS Typography: Line Height</a>
             </li>
             <li>
-              <p><a class="ex" href="13-HTML&CSS-Intro/background-color.html">CSS Colors: Background Color</p></a>
+              <a class="ex" href="13-HTML&CSS-Intro/background-color.html">CSS Colors: Background Color</a>
             </li>
             <li>
-              <p><a class="ex" href="13-HTML&CSS-Intro/text-color.html">CSS Colors: Text Color</p></a>
+              <a class="ex" href="13-HTML&CSS-Intro/text-color.html">CSS Colors: Text Color</a>
             </li>
             <li>
-              <p><a class="ex" href="13-HTML&CSS-Intro/border-color.html">CSS Colors: Border Color</p></a>
+              <a class="ex" href="13-HTML&CSS-Intro/border-color.html">CSS Colors: Border Color</a>
             </li>
             <li>
-              <p><a class="ex" href="13-HTML&CSS-Intro/background-images.html">CSS Colors: Background Images</p></a>
+              <a class="ex" href="13-HTML&CSS-Intro/background-images.html">CSS Background: Background Images</a>
             </li>
             <li>
-              <p><a class="ex" href="13-HTML&CSS-Intro/background-size.html">CSS Colors: Background Size</p></a>
+              <a class="ex" href="13-HTML&CSS-Intro/background-size.html">CSS Background: Background Size</a>
             </li>
-
+            <li>
+              <a class="ex" href="13-HTML&CSS-Intro/hover.html">CSS Pseudo-classes: Hover</a>
+            </li>
+            <li>
+              <a class="ex" href="13-HTML&CSS-Intro/first-line.html">CSS Pseudo-elements: First-line</a>
+            </li>
           </ol>
         </section>
 
@@ -118,147 +122,146 @@
           <a class="ex" href="#section2" onclick="toggleSection('section2'); return false;">CSS Selectors – Tasks</a>
         </h2>
         <section class="active">
-          <ol>
+          <ol class="li-space">
             <li>
               Type Selector
-              <ul>
+              <ul class="li-space">
                 <li>
-                  <p><a class="ex" href="14-CSS-Selectors/type-selector-1.html">to style all paragraph elements</a></p>
+                  <a class="ex" href="14-CSS-Selectors/type-selector-1.html">to style all paragraph elements</a>
                 </li>
                 <li>
-                  <p><a class="ex" href="14-CSS-Selectors/type-selector-2.html">to style all heading elements</a></p>
+                  <a class="ex" href="14-CSS-Selectors/type-selector-2.html">to style all heading elements</a>
                 </li>
                 <li>
-                  <p><a class="ex" href="14-CSS-Selectors/type-selector-3.html">to style different HTML elements</a></p>
+                  <a class="ex" href="14-CSS-Selectors/type-selector-3.html">to style different HTML elements</a>
                 </li>
               </ul>
             </li>
             <li>
               Class Selector
-              <ul>
+              <ul class="li-space">
                 <li>
-                  <p><a class="ex" href="14-CSS-Selectors/class-selector-1.html">to change the color of text inside
-                      elements</a></p>
+                  <a class="ex" href="14-CSS-Selectors/class-selector-1.html">to change the color of text inside
+                    elements</a>
                 </li>
                 <li>
-                  <p><a class="ex" href="14-CSS-Selectors/class-selector-2.html">to change the background color of
-                      elements</a></p>
+                  <a class="ex" href="14-CSS-Selectors/class-selector-2.html">to change the background color of
+                    elements</a>
                 </li>
                 <li>
-                  <p><a class="ex" href="14-CSS-Selectors/class-selector-3.html">to apply a common style to multiple
-                      elements</a>
-                  </p>
+                  <a class="ex" href="14-CSS-Selectors/class-selector-3.html">to apply a common style to multiple
+                    elements</a>
+
                 </li>
                 <li>
-                  <p><a class="ex" href="14-CSS-Selectors/class-selector-4.html">to change the background color of
-                      elements</a></p>
+                  <a class="ex" href="14-CSS-Selectors/class-selector-4.html">to change the background color of
+                    elements</a>
                 </li>
               </ul>
             </li>
             <li>
-              <p><a class="ex" href="14-CSS-Selectors/percentage-width.html">Percentage Width</a></p>
+              <a class="ex" href="14-CSS-Selectors/percentage-width.html">Percentage Width</a>
             </li>
             <li>
-              <p><a class="ex" href="14-CSS-Selectors/nested-divs.html">Nested Divs</a></p>
+              <a class="ex" href="14-CSS-Selectors/nested-divs.html">Nested Divs</a>
             </li>
             <li>
-              <p><a class="ex" href="14-CSS-Selectors/pixel-width.html">Pixel Width</a></p>
+              <a class="ex" href="14-CSS-Selectors/pixel-width.html">Pixel Width</a>
             </li>
             <li>
-              <p><a class="ex" href="14-CSS-Selectors/pixel-vs-percentage-width.html">Pixel vs Percentage Width</a></p>
+              <a class="ex" href="14-CSS-Selectors/pixel-vs-percentage-width.html">Pixel vs Percentage Width</a>
             </li>
             <li>
-              <p><a class="ex" href="14-CSS-Selectors/em-units.html">EM Units</a></p>
+              <a class="ex" href="14-CSS-Selectors/em-units.html">EM Units</a>
             </li>
             <li>
-              <p><a class="ex" href="14-CSS-Selectors/rem-units.html">REM Units</a></p>
+              <a class="ex" href="14-CSS-Selectors/rem-units.html">REM Units</a>
             </li>
             <li>
               Specificity
-              <ul>
+              <ul class="li-space">
                 <li>
-                  <p><a class="ex" href="14-CSS-Selectors/specificity-1.html">Class selector style is applied</a></p>
+                  <a class="ex" href="14-CSS-Selectors/specificity-1.html">Class selector style is applied</a>
                 </li>
                 <li>
-                  <p><a class="ex" href="14-CSS-Selectors/specificity-2.html">ID selector style takes precedence</a></p>
+                  <a class="ex" href="14-CSS-Selectors/specificity-2.html">ID selector style takes precedence</a>
                 </li>
               </ul>
             </li>
             <li>
-              <p><a class="ex" href="14-CSS-Selectors/id-selector.html">ID Selector</a></p>
+              <a class="ex" href="14-CSS-Selectors/id-selector.html">ID Selector</a>
             </li>
             <li>
               Attribute Selector
-              <ul>
+              <ul class="li-space">
                 <li>
-                  <p><a class="ex" href="14-CSS-Selectors/attribute-selector-1.html">to style input elements</a></p>
+                  <a class="ex" href="14-CSS-Selectors/attribute-selector-1.html">to style input elements</a>
                 </li>
                 <li>
-                  <p><a class="ex" href="14-CSS-Selectors/attribute-selector-2.html">to change the text color of
-                      links</a></p>
+                  <a class="ex" href="14-CSS-Selectors/attribute-selector-2.html">to change the text color of
+                    links</a>
                 </li>
               </ul>
             </li>
             <li>
               Universal Selector
-              <ul>
+              <ul class="li-space">
                 <li>
-                  <p><a class="ex" href="14-CSS-Selectors/universal-selector-1.html">to set a default margin and
-                      padding</a></p>
+                  <a class="ex" href="14-CSS-Selectors/universal-selector-1.html">to set a default margin and
+                    padding</a>
                 </li>
                 <li>
-                  <p><a class="ex" href="14-CSS-Selectors/universal-selector-2.html">to set a default font-family and
-                      color
-                    </a></p>
+                  <a class="ex" href="14-CSS-Selectors/universal-selector-2.html">to set a default font-family and
+                    color</a>
                 </li>
               </ul>
             </li>
             <li>
-              <p><a class="ex" href="14-CSS-Selectors/descendant-combinator.html">Descendant Combinator</a></p>
+              <a class="ex" href="14-CSS-Selectors/descendant-combinator.html">Descendant Combinator</a>
             </li>
             <li>
-              <p><a class="ex" href="14-CSS-Selectors/combinator-comparison.html">Combinator Comparison</a></p>
+              <a class="ex" href="14-CSS-Selectors/combinator-comparison.html">Combinator Comparison</a>
             </li>
             <li>
-              <p><a class="ex" href="14-CSS-Selectors/selector-list.html">Selector List</a></p>
+              <a class="ex" href="14-CSS-Selectors/selector-list.html">Selector List</a>
             </li>
             <li>
               Child Combinator
-              <ul>
+              <ul class="li-space">
                 <li>
-                  <p><a class="ex" href="14-CSS-Selectors/child-combinator-1.html">to style direct children of a div
-                      element</a></p>
+                  <a class="ex" href="14-CSS-Selectors/child-combinator-1.html">to style direct children of a div
+                    element</a>
                 </li>
                 <li>
-                  <p><a class="ex" href="14-CSS-Selectors/child-combinator-2.html">to style direct children of a
-                      specific class</a></p>
+                  <a class="ex" href="14-CSS-Selectors/child-combinator-2.html">to style direct children of a
+                    specific class</a>
                 </li>
               </ul>
             </li>
             <li>
               Box Model
-              <ul>
+              <ul class="li-space">
                 <li>
-                  <p><a class="ex" href="14-CSS-Selectors/box-model-1.html">by setting margin, border, padding, and
-                      content area</a></p>
+                  <a class="ex" href="14-CSS-Selectors/box-model-1.html">by setting margin, border, padding, and
+                    content area</a>
                 </li>
                 <li>
-                  <p><a class="ex" href="14-CSS-Selectors/box-model-2.html">the total width with padding,
-                      border, and margin</a></p>
+                  <a class="ex" href="14-CSS-Selectors/box-model-2.html">the total width with padding,
+                    border, and margin</a>
                 </li>
               </ul>
             </li>
             <li>
-              <p><a class="ex" href="14-CSS-Selectors/display-property.html">Display Property</a></p>
+              <a class="ex" href="14-CSS-Selectors/display-property.html">Display Property</a>
             </li>
             <li>
-              <p><a class="ex" href="14-CSS-Selectors/width-properties.html">Width Properties</a></p>
+              <a class="ex" href="14-CSS-Selectors/width-properties.html">Width Properties</a>
             </li>
             <li>
-              <p><a class="ex" href="14-CSS-Selectors/height-properties.html">Height Properties</a></p>
+              <a class="ex" href="14-CSS-Selectors/height-properties.html">Height Properties</a>
             </li>
             <li>
-              <p><a class="ex" href="14-CSS-Selectors/margin-border-padding.html">Margin, Border, Padding</a></p>
+              <a class="ex" href="14-CSS-Selectors/margin-border-padding.html">Margin, Border, Padding</a>
             </li>
           </ol>
         </section>
@@ -266,13 +269,12 @@
           <a class="ex" href="#section3" onclick="toggleSection('section3'); return false;">Media Queries – Tasks</a>
         </h2>
         <section class="active">
-          <ol>
+          <ol class="li-space">
             <li>
-              <p><a class="ex" href="17-Media-Queries/responsive-design.html">Responsive Design</a></p>
+              <a class="ex" href="17-Media-Queries/responsive-design.html">Responsive Design</a>
             </li>
             <li>
-              <p><a class="ex" href="17-Media-Queries/advanced-responsive-design.html">Advanced Responsive Design</a>
-              </p>
+              <a class="ex" href="17-Media-Queries/advanced-responsive-design.html">Advanced Responsive Design</a>
             </li>
           </ol>
         </section>
