--- a/13-HTML&CSS-Intro/line-height.html
+++ b/13-HTML&CSS-Intro/line-height.html
@@ -18,44 +18,44 @@
       <div id="main">
         <h1>Line Height</h1>
         <p class="jetbrainsmono weight-light px-15">
-          0123456789 <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= := ++ => ->&nbsp; Line Height: normal
+          0123456789 &lt;!-- := <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt;&nbsp; Line Height: normal
             <br>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
             voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
         <p class="jetbrainsmono spacing-1 weight-light px-15">
-          0123456789 <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= := ++ => ->&nbsp; Line Height: 15px (1.0)
-            <br>
+          0123456789 &lt;!-- := <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt&nbsp; Line Height: 15px
+            (1.0) <br>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
             voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
         <p class="jetbrainsmono spacing-1-2 weight-light px-15">
-          0123456789 <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= := ++ => ->&nbsp; Line Height: 18px (1.2)
-            <br>
+          0123456789 &lt;!-- := <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt&nbsp; Line Height: 18px
+            (1.2) <br>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
             voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
         <p class="jetbrainsmono spacing-1-3 weight-light px-15">
-          0123456789 <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= := ++ => ->&nbsp; Line Height: 20px (1.3)
-            <br>
+          0123456789 &lt;!-- := <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt&nbsp; Line Height: 20px
+            (1.3) <br>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
             voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
         <p class="jetbrainsmono spacing-1-4 weight-light px-15">
-          0123456789 <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= := ++ => ->&nbsp; Line Height: 21px (1.4)
-            <br>
+          0123456789 &lt;!-- := <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt&nbsp; Line Height: 21px
+            (1.4) <br>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
             voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
         <p class="jetbrainsmono spacing-1-5 weight-light px-15">
-          0123456789 <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= := ++ => ->&nbsp; Line Height: 23px (1.5)
-            <br>
+          0123456789 &lt;!-- := <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt&nbsp; Line Height: 23px
+            (1.5) <br>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
             voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
         <p class="jetbrainsmono spacing-1-6 weight-light px-15">
-          0123456789 <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= := ++ => ->&nbsp; Line Height: 24px (1.6)
-            <br>
+          0123456789 &lt;!-- := <=&nbsp;!==&nbsp;!=&nbsp;==&nbsp;===&nbsp;>= ++ => -> --&gt&nbsp; Line Height: 24px
+            (1.6) <br>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam sint, culpa aliquam ab non
             voluptas esse necessitatibus consequatur rerum? Quasi illum qui facilis itaque iste distinctio.
         </p>
